--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:title="@string/app_name" />
 
         <LinearLayout
@@ -41,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:itemTextAppearance="@style/NavElementStyle"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu" />
 
