--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,17 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_groceries"
-            android:icon="@drawable/ic_launcher_fg"
+            android:id="@+id/nav_category_party_tasks"
+            android:icon="@drawable/ic_category_party_tasks"
             android:title="@string/category_party_tasks" />
         <item
-            android:id="@+id/nav_work"
-            android:icon="@drawable/ic_launcher_fg"
+            android:id="@+id/nav_category_home_tasks"
+            android:icon="@drawable/ic_category_home_tasks"
             android:title="@string/category_home_tasks" />
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_launcher_fg"
+            android:id="@+id/nav_category_tickets"
+            android:icon="@drawable/ic_category_tickets"
             android:title="@string/category_tickets" />
+        <item
+            android:id="@+id/nav_stats"
+            android:icon="@drawable/ic_stats"
+            android:title="@string/stats" />
     </group>
 
 </menu>
