--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-<!--    <color name="my_light_primary">ff0000</color>-->
+    <color name="my_light_primary">#CF232E</color>
+    <color name="my_light_on_primary">#FFFFFF</color>
 </resources>
