AAAAAA(Fix back destination)

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,25 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/nav_main">
+    app:startDestination="@id/nav_home">
 
     <fragment
-        android:id="@+id/nav_main"
-        android:name="su.tovarischi.pyatiletka.MainFragment"
-        tools:layout="@layout/fragment_main"/>
+        android:id="@+id/nav_home"
+        android:name="su.tovarischi.pyatiletka.HomeFragment"
+        tools:layout="@layout/fragment_home"/>
 
     <fragment
-        android:id="@+id/nav_tickets"
+        android:id="@+id/nav_category_tickets"
         android:name="su.tovarischi.pyatiletka.TicketsFragment"
         tools:layout="@layout/fragment_tickets"/>
 
     <fragment
-        android:id="@+id/nav_home_tasks"
+        android:id="@+id/nav_category_home_tasks"
         android:name="su.tovarischi.pyatiletka.HomeTasksFragment"
         tools:layout="@layout/fragment_home_tasks"/>
 
     <fragment
-        android:id="@+id/nav_party_tasks"
+        android:id="@+id/nav_category_party_tasks"
         android:name="su.tovarischi.pyatiletka.PartyTasksFragment"
         tools:layout="@layout/fragment_party_tasks"/>
 
