--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_category_party_tasks"
+            android:title="@string/category_home" />
+        <item
             android:id="@+id/nav_category_party_tasks"
             android:icon="@drawable/ic_category_party_tasks"
             android:title="@string/category_party_tasks" />
