--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 <resources>
     <style name="ToolbarTitleStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:fontFamily">@font/molot</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+    </style>
+    <style name="ToolbarSubtitleStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
     <style name="NavHeaderTitleStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
