--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,8 +28,13 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-<!--    <style name="DialogFragmentButtonNo" parent="?attr/buttonBarPositiveButtonStyle">-->
-<!--        <item name="android:textSize">14sp</item>-->
-<!--        <item name="android:textColor">@color/black</item>-->
-<!--    </style>-->
+    <style name="PropagandaCardTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:fontFamily">@font/molot</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="PropagandaCardDesc" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
