--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,7 +8,9 @@
     <fragment
         android:id="@+id/nav_category_home"
         android:name="su.tovarischi.pyatiletka.HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+    </fragment>
+
 
     <fragment
         android:id="@+id/nav_category_tickets"
