--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,22 +28,24 @@
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="PropagandaCardTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="PropagandaCardDesc" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="PropagandaDetailFragmentTitle" parent="TextAppearance.AppCompat.Title">
         <item name="android:fontFamily">@font/molot</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="PropagandaCardDesc" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-    <style name="PropagandaDetailFragmentTitle" parent="TextAppearance.AppCompat.Title">
-        <item name="android:fontFamily">@font/molot</item>
-        <item name="android:textSize">35sp</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
     <style name="PropagandaDetailFragmentDesc" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 </resources>
